--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendor/fancyBox"]
 	path = vendor/fancyBox
 	url = https://github.com/fancyapps/fancyBox.git
+[submodule "vendor/jQuery-contextMenu"]
+	path = vendor/jQuery-contextMenu
+	url = https://github.com/medialize/jQuery-contextMenu.git
